--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 # arxivの学問領域の指定
-subject: 'cat:cs.*'
+subject: 'cat:cs.AI OR cat:cs.CV OR cat:stat.ML OR cat:cs.LG'
 
 # 検索キーワード
 keywords:
-        kaggle: 3
-        resnet: 3
-        anomaly detection: 1
+        graph neural network: 3
+        graph: 1
+        vector image recognition: 3
 
 # 通知の閾値
 score_threshold: 0
